# repzly

./: .env.example  .gitignore  README.md  body-highlioghter.md  docker-compose.yml  insert_all_exercises.py  muscle.sql  postman_collection.json  tbd.txt
.claude/: settings.local.json
analytics-service/src/: config.rs  db.rs  error.rs  state.rs
analytics-service/src/handlers/: analytics.rs
api-gateway/: Cargo.toml
api-gateway/src/: config.rs  error.rs  main.rs  proxy.rs  state.rs
api-gateway/src/middleware/: auth.rs
backend/: .env  Cargo.toml
backend/analytics-service/: Cargo.toml  Dockerfile
backend/analytics-service/src/: main.rs
backend/analytics-service/src/models/: timeseries.rs
backend/analytics-service/src/services/: rabbitmq.rs
backend/api-gateway/: Dockerfile
backend/api-gateway/src/: config.rs  error.rs  main.rs  proxy.rs
backend/api-gateway/src/middleware/: mod.rs
backend/auth-service/: Cargo.toml  Dockerfile
backend/auth-service/src/: error.rs  main.rs
backend/auth-service/src/handlers/: mod.rs
backend/auth-service/src/models/: mod.rs  token.rs  user.rs
backend/auth-service/src/services/: email.rs  mod.rs
backend/program-service/: Cargo.toml  Dockerfile
backend/program-service/src/: config.rs  db.rs  error.rs  main.rs
backend/program-service/src/handlers/: mod.rs  workout_exercise.rs
backend/program-service/src/models/: exercise.rs  workout_exercise.rs
backend/program-service/src/services/: program.rs  s3.rs  workout_exercise.rs
backend/src/: config.rs  main.rs  state.rs
backend/src/handlers/: auth.rs  email.rs
backend/src/services/: token.rs
backend/started-program-service/: Dockerfile
backend/started-program-service/src/: config.rs  db.rs  error.rs  main.rs
backend/started-program-service/src/handlers/: mod.rs  started_program.rs
backend/started-program-service/src/models/: started_workout_exercise.rs
backend/started-program-service/src/services/: workout_client.rs
docker/nginx/: Dockerfile  nginx.conf
docker/postgres/: init.sql
frontend/: app.json  eas.json  global.css  package-lock.json  package.json  tailwind.config.js
frontend/app/: _layout.tsx  active-workout.tsx  create-program.tsx  program-editor.tsx  program-history.tsx  register.tsx  sign-in.tsx  view-program-editor.tsx  view-program.tsx  view-workout.tsx  workout-editor.tsx  workout-history.tsx
frontend/components/: ActiveExerciseItem.tsx  ActiveSetRow.tsx  Button.tsx  ExerciseDemoModal.tsx  ExerciseHistoryModal.tsx  ExerciseItem.tsx  ExercisePickerModal.tsx  ExerciseViewItem.tsx  HistoryExerciseItem.tsx  HistorySetRow.tsx  Input.tsx  KeyboardAwareScrollView.tsx  Label.tsx  NotesModal.tsx  ProgramCard.tsx  ReorderExercisesModal.tsx  ReorderWorkoutsModal.tsx  SafeAreaView.tsx  SetRow.tsx  SetViewRow.tsx  Toast.tsx  WeekSelector.tsx  WorkoutCard.tsx  WorkoutOverviewCard.tsx  WorkoutViewCard.tsx
frontend/config/: api.ts
frontend/hooks/: useAuth.ts  useProgram.ts  useProgramSearch.ts
frontend/services/: analytics.ts  auth.ts  exercise.ts  program.ts  startedProgram.ts
frontend/types/: analytics.ts  exercise.ts  program.ts  startedProgram.ts
frontend/utils/: api.ts  authStore.ts  exerciseStore.ts  muscleMapping.ts  programStore.ts  startedProgramStore.ts  storage.ts  viewProgramStore.ts  workoutApi.ts
started-program-service/: .env.example  Cargo.toml  postman_collection.json
started-program-service/src/: config.rs  error.rs  main.rs  state.rs
started-program-service/src/handlers/: started_program.rs
started-program-service/src/models/: mod.rs  started_program.rs  started_workout_exercise.rs
started-program-service/src/services/: mod.rs  rabbitmq.rs  started_program.rs  workout_client.rs
utils/: data.sql
workout-service/: .env.example  Cargo.toml
workout-service/src/: config.rs  db.rs  main.rs  state.rs
workout-service/src/handlers/: exercise.rs  mod.rs  program.rs  workout_exercise.rs
workout-service/src/models/: claims.rs  mod.rs  program.rs  workout_exercise.rs
workout-service/src/services/: exercise.rs  mod.rs  program.rs  workout_exercise.rs
(+10 files in other folders)
