[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
dotenvy = "0.15.7"
bytes = "1"
tower-http = { version = "0.6", features = ["cors"] }

[profile.dev]
debug = false
