[package]
name = "jwt-auth-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"          # Changed from 0.7 to 0.8
axum-jwt-auth = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
jsonwebtoken = "10"   # Changed from 9 to 10
chrono = "0.4"
dotenvy = "0.15.7"
