[package]
name = "started-program-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
uuid = { version = "1", features = ["v4", "serde"] }
mongodb = "3"
bson = { version = "2", features = ["chrono-0_4"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
lapin = "2"

[profile.dev]
debug = false
