[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
chrono = "0.4"
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls", "chrono"] }
argon2 = "0.5.3"
uuid = { version = "1", features = ["v4"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }
rand = "0.8"

# Fix Windows PDB limit issue - disable debug info completely for dev builds
[profile.dev]
debug = false